Fixed splitter visibility on Linux

--- a/firefox/userChrome.css
+++ b/firefox/userChrome.css
@@ -27,6 +27,11 @@
 
 /* Linux/GTK specific styles */
 @media (-moz-gtk-csd-available), (-moz-platform: linux) {
+
+    #sidebar-splitter {
+        visibility: collapse !important
+    }
+
     .browser-toolbar:not(.titlebar-color) {
         /* Fixes wrong coloring applied with --toolbar-bgcolor by Firefox (#101) */
         background-color: transparent !important;
